# ya_skill_relocation_helper

./: .gitignore  Dockerfile  README.md  build  push_new_version.sh  pyproject.toml  run.sh  test_config.json  update.sh
relocation_helper/: appConfig.py  dao.py  main.py  migration.py  nlu.py  relocationHelper.py  server.py  skillLogic.py
relocation_helper/migration/: 0001.init_database.py
template_for_service/: relocation-helper.service
tests/: test_dao.py  test_nlu.py  test_skillLogic.py
